--- a/docassemble/SustCoReportBAS/data/static/sds.css
+++ b/docassemble/SustCoReportBAS/data/static/sds.css
@@ -166,6 +166,10 @@ div.col-md-8.dafieldpart label.btn-primary {
   width: 100%
 }
 
+/* remove requirement astrix  */
+.da-form-group.darequired .da-form-label:after {
+    content: '';
+}
 
 /* style da page for download of report */
 
@@ -180,11 +184,7 @@ div.da-attachment-download-wrapper #dadownload-tab0 {
 
 }
 
-/* Reposition the continue and back buttons to a fixed position at the bottom of the page */
-.da-button-set.da-field-buttons {
-  position: absolute;
-  bottom: 0;
-}
+
 
 /* Change english to Swedish in the download document page */
 /* Text to send */
@@ -193,6 +193,18 @@ div.da-attachment-download-wrapper #dadownload-tab0 {
 }
 .card-header:after {
   content: "Fylla i din e-post för att få dokumentet skickat till dig";
+}
+
+/* Reposition the continue and back buttons to a fixed position at the bottom of the page at the download page */
+.dabody.report_download .da-button-set.da-field-buttons {
+  position: absolute;
+  bottom: 0;
+}
+
+/* Restore the place of the button on the exit page. */
+.dabody.scr_exit .da-button-set.da-field-buttons .btn.btn-da.btn-danger {
+  position: relative;
+  bottom: 0;
 }
 
 
@@ -206,3 +218,6 @@ div.da-attachment-download-wrapper #dadownload-tab0 {
 } */
 
 /* change download text to swedish */
+
+
+
